Update SecurityConfig.java
Signed-off-by: unispace-capstone24 <unispacecs@gmail.com>